# aobasis

./: .gitignore  README.md  benchmark.py  compare_zonal_fast.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aobasis/: __init__.py  base.py  fourier.py  hadamard.py  kl.py  utils.py  zernike.py  zonal.py
tests/: test_generators.py  test_robustness.py  test_utils.py
