[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aobasis"
version = "0.1.0"
description = "A package for generating AO basis sets (KL, Zernike, Fourier)"
readme = "README.md"
authors = [{ name = "User", email = "user@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "imageio",
]

[project.urls]
"Homepage" = "https://github.com/example/aobasis"

[tool.setuptools.packages.find]
where = ["src"]
