[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aobasis"
version = "1.0.0"
description = "A package for generating AO basis sets (KL, Zernike, Fourier)"
readme = "README.md"
authors = [{ name = "Jacob Taylor", email = "jtaylor@keck.hawaii.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "imageio",
]

[project.urls]
"Homepage" = "https://github.com/jacotay7/aobasis"
"Bug Tracker" = "https://github.com/jacotay7/aobasis/issues"

[tool.setuptools.packages.find]
where = ["src"]
